--- a/public/single/index.html
+++ b/public/single/index.html
@@ -54,91 +54,84 @@
 </head>
 <body>
 
-    
-    	<nav id="colorlib-main-nav" role="navigation">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-		<div class="js-fullheight colorlib-table">
-			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<ul>
-							<li><a href="../index.html">Blog</a></li>
-							<li class="active"><a href="">Single Blog</a></li>
-							<li><a href="../about.html">About me</a></li>
-							<li><a href="../contact.html">Contact me</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="row row-padded-bottom">
-					<div class="col-md-12 text-center">
-						<h2 class="head-title">About Me</h2>
-						<a href="#" class="about-img">
-							<img class="img-responsive" src="images/about.jpg" alt="html5 bootstrap template by colorlib">
-						</a>
-						<span class="author-name">Vanessa Morgan</span>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="colorlib-social-icons">
-							<a href="#"><i class="icon-facebook4"></i></a>
-							<a href="#"><i class="icon-twitter3"></i></a>
-							<a href="#"><i class="icon-googleplus"></i></a>
-							<a href="#"><i class="icon-dribbble2"></i></a>
-						</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Instagram</h2>
-						<a href="images/gallery-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/gallery-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/gallery-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/gallery-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/gallery-5.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-5.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/gallery-6.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-6.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/gallery-7.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-7.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/gallery-8.jpg" class="gallery image-popup-link text-center" style="background-image: url(images/gallery-8.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</nav>
-	
-	<div id="colorlib-page">
-		<header>
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html">Shout.</a>
-						</div>
-						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-					</div>
-				</div>
-			</div>
-		</header>
+    <nav id="colorlib-main-nav" role="navigation">
+    <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+    <div class="js-fullheight colorlib-table">
+        <div class="colorlib-table-cell js-fullheight">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+                        <button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <ul id="nav-links">
+                        <li><a href="/index">Home</a></li>
+                        <li><a href="/services">Services</a></li>
+                        <li><a href="/work">Work</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="head-title">Works</h2>
+                    <a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-1.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                    <a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-2.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                    <a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-3.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                    <a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-4.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
+
+
+<script>
+    // Get the current page from the URL
+    const currentPage = window.location.pathname.replaceAll("/", ""); // 'blog'
+
+    // Select all navigation links
+    const navLinks = document.querySelectorAll('#nav-links li a');
+
+    // Loop through the links and add the active class if the href matches the current page
+    navLinks.forEach(link => {
+        if (link.getAttribute('href').replaceAll("/", "") === currentPage) {
+            link.parentElement.classList.add('active');
+        };
+    });
+</script>
+
+
+
+
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="colorlib-navbar-brand">
+                        <a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+                    </div>
+                    <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+                </div>
+            </div>
+        </div>
+    </header>
+    	<div id="colorlib-page">
 		<div id="colorlib-featured-flex">
 			<div class="one-forth">
 				<div class="text-inner">
@@ -324,7 +317,6 @@
 		</div>
 
 	</div>
-
 
     
 <footer>
