--- a/public/work/index.html
+++ b/public/work/index.html
@@ -54,65 +54,84 @@
 </head>
 <body>
 
-    
-    	<nav id="colorlib-main-nav" role="navigation">
-		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
-		<div class="js-fullheight colorlib-table">
-			<div class="colorlib-table-cell js-fullheight">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="form-group">
-							<input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
-							<button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<ul>
-							<li><a href="../index.html">Home</a></li>
-							<li><a href="../services.html">Services</a></li>
-							<li class="active"><a href="">Work</a></li>
-							<li><a href="../blog.html">Blog</a></li>
-							<li><a href="../about.html">About</a></li>
-							<li><a href="../contact.html">Contact</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12">
-						<h2 class="head-title">Works</h2>
-						<a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-1.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-2.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-3.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-						<a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-4.jpg);">
-							<span><i class="icon-search3"></i></span>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</nav>
-	
-	<div id="colorlib-page">
-		<header>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
-						</div>
-						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-					</div>
-				</div>
-			</div>
-		</header>
+    <nav id="colorlib-main-nav" role="navigation">
+    <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle active"><i></i></a>
+    <div class="js-fullheight colorlib-table">
+        <div class="colorlib-table-cell js-fullheight">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="search" placeholder="Enter any key to search...">
+                        <button type="submit" class="btn btn-primary"><i class="icon-search3"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <ul id="nav-links">
+                        <li><a href="/index">Home</a></li>
+                        <li><a href="/services">Services</a></li>
+                        <li><a href="/work">Work</a></li>
+                        <li><a href="/blog">Blog</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2 class="head-title">Works</h2>
+                    <a href="images/work-1.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-1.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                    <a href="images/work-2.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-2.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                    <a href="images/work-3.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-3.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                    <a href="images/work-4.jpg" class="gallery image-popup-link text-center" style="background-image: url(/images/work-4.jpg);">
+                        <span><i class="icon-search3"></i></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
+
+
+
+<script>
+    // Get the current page from the URL
+    const currentPage = window.location.pathname.replaceAll("/", ""); // 'blog'
+
+    // Select all navigation links
+    const navLinks = document.querySelectorAll('#nav-links li a');
+
+    // Loop through the links and add the active class if the href matches the current page
+    navLinks.forEach(link => {
+        if (link.getAttribute('href').replaceAll("/", "") === currentPage) {
+            link.parentElement.classList.add('active');
+        };
+    });
+</script>
+
+
+
+
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="colorlib-navbar-brand">
+                        <a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+                    </div>
+                    <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+                </div>
+            </div>
+        </div>
+    </header>
+    	<div id="colorlib-page">
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
@@ -256,7 +275,6 @@
 		</div>
 
 	</div>
-
 
 
     
